--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "export": "next export"
   },
   "dependencies": {
     "next": "9.5.2",
@@ -14,7 +15,8 @@
   },
   "devDependencies": {
     "@types/node": "^14.6.0",
-    "@types/react": "^16.9.46",
+    "@types/react": "^16.9.47",
+    "babel-plugin-inline-react-svg": "^1.1.1",
     "typescript": "^4.0.2"
   }
 }
