--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "export": "next export"
+    "export": "next export",
+    "predeploy": "next build && next export",
+    "deploy": "gh-pages -d out"
   },
   "dependencies": {
+    "gh-pages": "^3.1.0",
     "next": "9.5.2",
     "react": "16.13.1",
     "react-dom": "16.13.1"
